add random buy handler
