# openapi.yml
@@ -1138,6 +1138,54 @@ paths:
                 required:
                   - totalCount
                   - items
+  /nfts/random-buy:
+    post:
+      operationId: listRandomBuyNFT
+      requestBody:
+        required: true
+        content:
+          'application/json':
+            schema:
+              type: object
+              properties:
+                maxPrice:
+                  type: integer
+                  format: int64
+                limit:
+                  type: integer
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema:
+                type: object
+                properties:
+                  totalCount:
+                    type: integer
+                  items:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/nft'
+                  collection:
+                    type: object
+                    additionalProperties:
+                      $ref: '#/components/schemas/collection'
+                  auction:
+                    type: object
+                    additionalProperties:
+                      $ref: '#/components/schemas/auction'
+                  directSell:
+                    type: object
+                    additionalProperties:
+                      $ref: '#/components/schemas/directSell'
+                  directBuy:
+                    type: object
+                    additionalProperties:
+                      $ref: '#/components/schemas/directBuy'
+                required:
+                  - totalCount
+                  - items
   /nfts/top:
     post:
       operationId: listTopNFT
